Replace JPEG logo with SVG logo in header

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="flex justify-between items-center h-16">
                 <!-- Logo/Brand Name (Using uploaded JPEG logo, resized for navigation) -->
                 <div class="flex-shrink-0 flex items-center">
-                    <img src="uploaded:JPEG.jpg-86808c7b-5886-45bc-8d24-12f6b9874f1c" 
-                         onerror="this.onerror=null; this.src='https://placehold.co/120x40/ffffff/10529A?text=SENTINEL';" 
-                         alt="Sentinel Health Logo" 
-                         class="h-10 w-auto object-contain mr-2"/>
+                    <img src="SVG.svg"
+     alt="Sentinel Health Logo"
+     class="h-10 w-auto object-contain mr-2" />
+
                     <span class="text-xl font-extrabold text-sentinel-blue hidden sm:inline">Sentinel Health</span>
                 </div>
 
