Replace JPEG logo with SVG logo in index.html hero

--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
                     </a>
                 </div>
             </div>
-            <!-- Large Sentinel Logo Visual (Using actual JPEG logo with Fallback) -->
-            <div class="lg:w-1/2 flex justify-center mt-10 lg:mt-0">
-                <img src="uploaded:JPEG.jpg-86808c7b-5886-45bc-8d24-12f6b9874f1c" 
-                     onerror="this.onerror=null; this.src='https://placehold.co/320x320/ffffff/10529A?text=SENTINEL%20HEALTH%0ALOGO+LOADED';" 
-                     alt="Sentinel Health Logo" 
-                     class="w-64 sm:w-80 h-auto border-4 border-sentinel-light shadow-2xl bg-white p-4 rounded-3xl"
-                >
-            </div>
+           <!-- Large Sentinel Logo Visual -->
+<div class="lg:w-1/2 flex justify-center mt-10 lg:mt-0">
+    <img src="SVG.svg"
+         alt="Sentinel Health Logo"
+         class="w-64 sm:w-80 h-auto border-4 border-sentinel-light shadow-2xl bg-white p-4 rounded-3xl" />
+</div>
+
         </div>
     </header>
 
