Change hero background to solid color
Replaced hero background image with a solid color.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
         }
 
         /* Hero Background for Visual Emphasis */
-        .hero-bg {
-             /* Using the uploaded image as a background element for branding */
-            background-image: url('https://placehold.co/1200x600/10529A/FFFFFF?text=Florida+Sunrise+Background'); /* Placeholder for Florida backdrop */
-            background-size: cover;
-            background-position: center;
+.hero-bg {
+    background-color: #10529A; /* Sentinel blue hero background */
+}
+
         }
     </style>
 </head>
