Change text color for Sentinel Health logo from blue to black

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
      alt="Sentinel Health Logo"
      class="h-10 w-auto object-contain mr-2" />
 
-                    <span class="text-xl font-extrabold text-sentinel-blue hidden sm:inline">Sentinel Health</span>
-                </div>
+                    <span class="text-xl font-extrabold text-black hidden sm:inline">Sentinel Health</span>
 
                 <!-- Desktop Menu Links -->
                 <div class="hidden lg:flex space-x-4 text-sm font-semibold items-center">
