--- a/index.html
+++ b/index.html
@@ -286,43 +286,79 @@
         </div>
     </section>
 
-    <!-- 6. Contact Section -->
-    <section id="contact" class="py-20 bg-sentinel-blue/90 text-white">
-        <div class="container mx-auto px-6 lg:px-8">
-            <h2 class="text-4xl font-bold text-center text-sentinel-light mb-12">Get In Touch With Our Florida Team</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                <!-- Contact Card 1: Phone -->
-                <div class="p-6 bg-white/10 rounded-xl">
-                    <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-11a2 2 0 01-2-2z"/></svg>
-                    <h3 class="text-xl font-semibold mb-2">Call Us</h3>
-                    <p class="text-lg font-light">(800) 555-DME-FL</p>
-                    <p class="text-sm opacity-70">Mon - Fri: 8:00 AM - 5:00 PM EST</p>
-                </div>
-                <!-- Contact Card 2: Email -->
-                <div class="p-6 bg-white/10 rounded-xl">
-                    <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-1 12H4a2 2 0 01-2-2V6a2 2 0 012-2h16a2 2 0 012 2v12a2 2 0 01-2 2z"/></svg>
-                    <h3 class="text-xl font-semibold mb-2">Email</h3>
-                    <p class="text-lg font-light">info@sentinelhealth.com</p>
-                    <p class="text-sm opacity-70">We aim to respond within 4 hours.</p>
-                </div>
-                <!-- Contact Card 3: Location -->
-                <div class="p-6 bg-white/10 rounded-xl">
-                    <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.828 0l-4.243-4.243a8 8 0 1111.314 0z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/></svg>
-                    <h3 class="text-xl font-semibold mb-2">Florida Headquarters</h3>
-                    <p class="text-lg font-light">100 Sentinel Way, Orlando, FL 32801</p>
-                    <p class="text-sm opacity-70">Serving all of Florida state-wide.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+ <!-- 6. Contact Section -->
+<section id="contact" class="py-20 bg-sentinel-blue/90 text-white">
+  <div class="container mx-auto px-6 lg:px-8">
+    <h2 class="text-4xl font-bold text-center text-sentinel-light mb-12">
+      Get In Touch With Our Florida Team
+    </h2>
 
-    <!-- Footer -->
-    <footer class="bg-sentinel-dark text-white py-6">
-        <div class="container mx-auto px-6 lg:px-8 text-center text-sm opacity-80">
-            <p>&copy; 2024 Sentinel Health, LLC. All rights reserved. | Florida DME Provider License #FL-DME-9876</p>
-            <p class="mt-2">HIPAA Notice | Privacy Policy | Terms of Service</p>
-        </div>
-    </footer>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+      
+      <!-- Contact Card 1: Phone -->
+      <div class="p-6 bg-white/10 rounded-xl">
+        <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-11a2 2 0 01-2-2z" />
+        </svg>
+        <h3 class="text-xl font-semibold mb-2">Call Us</h3>
+        <p class="text-lg font-light">
+          <a href="tel:17274731833" class="underline decoration-white/40 hover:decoration-white">
+            (727) 473-1833
+          </a>
+        </p>
+        <p class="text-sm opacity-70 mt-2">
+          Need help? We're here for patients and providers.
+        </p>
+      </div>
+
+      <!-- Contact Card 2: Email -->
+      <div class="p-6 bg-white/10 rounded-xl">
+        <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-1 12H4a2 2 0 01-2-2V6a2 2 0 012-2h16a2 2 0 012 2v12a2 2 0 01-2 2z" />
+        </svg>
+        <h3 class="text-xl font-semibold mb-2">Email</h3>
+        <p class="text-lg font-light">
+          <a href="mailto:info@mysentinelhealth.com" class="underline decoration-white/40 hover:decoration-white">
+            info@mysentinelhealth.com
+          </a>
+        </p>
+        <p class="text-sm opacity-70 mt-2">
+          Quick responses for referrals, orders, and support.
+        </p>
+      </div>
+
+      <!-- Contact Card 3: Location -->
+      <div class="p-6 bg-white/10 rounded-xl">
+        <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.828 0l-4.243-4.243a8 8 0 1111.314 0z" />
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+        </svg>
+        <h3 class="text-xl font-semibold mb-2">Florida Headquarters</h3>
+        <p class="text-lg font-light">
+          2454 N McMullen Booth Road<br>
+          Suite 700<br>
+          Clearwater, FL 33759
+        </p>
+        <p class="text-sm opacity-70 mt-2">
+          Serving patients and providers across Florida.
+        </p>
+      </div>
+    </div>
+
+    <!-- Contact Summary -->
+    <p class="mt-10 text-center text-lg font-medium">
+      Need to contact us? Call 
+      <a href="tel:17274731833" class="underline decoration-white/40 hover:decoration-white">
+        727-473-1833
+      </a>
+      or use 
+      <a href="mailto:info@mysentinelhealth.com" class="underline decoration-white/40 hover:decoration-white">
+        info@mysentinelhealth.com
+      </a>.
+    </p>
+
+  </div>
+</section>
 
     <!-- JavaScript for Mobile Menu Toggle -->
     <script>
