--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
       
       <!-- Contact Card 1: Phone -->
-      <div class="p-6 bg-white/10 rounded-xl">
+      <div class="p-6 bg-white/10 rounded-xl border border-white/20 shadow-lg hover:shadow-2xl hover:bg-white/20 transition duration-300">
         <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-11a2 2 0 01-2-2z" />
         </svg>
@@ -312,7 +312,7 @@
       </div>
 
       <!-- Contact Card 2: Email -->
-      <div class="p-6 bg-white/10 rounded-xl">
+      <div class="p-6 bg-white/10 rounded-xl border border-white/20 shadow-lg hover:shadow-2xl hover:bg-white/20 transition duration-300">
         <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-1 12H4a2 2 0 01-2-2V6a2 2 0 012-2h16a2 2 0 012 2v12a2 2 0 01-2 2z" />
         </svg>
@@ -328,7 +328,7 @@
       </div>
 
       <!-- Contact Card 3: Location -->
-      <div class="p-6 bg-white/10 rounded-xl">
+      <div class="p-6 bg-white/10 rounded-xl border border-white/20 shadow-lg hover:shadow-2xl hover:bg-white/20 transition duration-300">
         <svg class="w-10 h-10 mx-auto mb-4 text-sentinel-light" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.828 0l-4.243-4.243a8 8 0 1111.314 0z" />
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -359,6 +359,7 @@
 
   </div>
 </section>
+
 
     <!-- JavaScript for Mobile Menu Toggle -->
     <script>
