Revise eligibility section for secure verification
Updated eligibility section to enhance security and clarity.

--- a/index.html
+++ b/index.html
@@ -194,22 +194,29 @@
                     </div>
                 </div>
                 <div class="lg:w-1/2 mt-10 lg:mt-0 lg:pl-16">
-                    <div class="bg-sentinel-light/10 p-8 rounded-xl shadow-lg">
-                        <h3 class="text-2xl font-bold text-sentinel-blue mb-4">Check Your Eligibility Now</h3>
-                        <p class="mb-4 text-gray-700">Fill out our quick form and our team will verify your benefits within 24 hours.</p>
-                        <!-- Mock Insurance Verification Form -->
-                        <form class="space-y-4">
-                            <input type="text" placeholder="Full Name" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-sentinel-blue focus:border-sentinel-blue">
-                            <input type="tel" placeholder="Phone Number" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-sentinel-blue focus:border-sentinel-blue">
-                            <input type="text" placeholder="Insurance Provider Name" required class="w-full p-3 border border-gray-300 rounded-lg focus:ring-sentinel-blue focus:border-sentinel-blue">
-                            <button type="submit" class="w-full bg-sentinel-blue text-white font-bold py-3 rounded-lg hover:bg-sentinel-light transition duration-300">
-                                Submit for Verification
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="bg-sentinel-light/10 p-8 rounded-xl shadow-lg">
+        
+        <h3 class="text-2xl font-bold text-sentinel-blue mb-4">Check Your Eligibility Securely</h3>
+
+        <p class="mb-4 text-gray-700">
+            To protect your health information, Sentinel Health verifies benefits through a secure,
+            HIPAA-compliant online form. No protected health information (PHI) is collected on this website.
+        </p>
+
+        <a href="#"
+           target="_blank"
+           rel="noopener noreferrer"
+           class="w-full inline-block text-center bg-sentinel-blue text-white font-bold py-3 rounded-lg hover:bg-sentinel-light transition duration-300">
+            Start Secure Insurance Verification
+        </a>
+
+        <p class="mt-3 text-xs text-gray-500">
+            You will be redirected to our encrypted Sentinel Health verification portal.
+        </p>
+
+    </div>
+</div>
+
     </section>
 
     <!-- 4. Patient Portal Section (New) -->
